k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: npb
  labels:
    app.kubernetes.io/name: nextjs-prisma-boilerplate
    app.kubernetes.io/managed-by: kubectl
